--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Affordable and professional web design">
 	<meta name="keywords" content="web design, Affordable web design, professional web design">
 	<meta name="author" content="Marko">
+	<link rel="shortcut icon" href="./images/nero.png">
 	<title>Simple Web Design | About</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
